# AppGolds

./: README.md  build.gradle  gradle.properties  settings.gradle
annoProcessor/: build.gradle
annoProcessor/src/main/java/com/godx/annoprocessor/: BaseProcessor.java
annotation/src/main/java/com/godx/annotation/: MyClass.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/appglods/: HttpContracts.kt  MainActivity.kt  MyAppDelegate.kt  SearchBean.kt
app/src/main/res/values/: themes.xml
ffmpegtest/: build.gradle
ffmpegtest/src/main/: AndroidManifest.xml
ffmpegtest/src/main/java/com/example/ffrmpegtest/: FFCall.java  FFmpegTestActivity.kt
ffmpegtest/src/main/res/layout/: activity_ffmpeg.xml
ffmpegtest/src/main/res/values/: strings.xml
godx/: build.gradle
godx/src/main/: AndroidManifest.xml
godx/src/main/cpp/: CMakeLists.txt  log.h
godx/src/main/cpp/ffmpeg/: CMakeLists.txt  native-lib.cpp
godx/src/main/cpp/ffmpeg/main/: BaseChannel.cpp  BaseChannel.h  FFmpegCmd.cpp  FFmpegCmd.h  FFmpegPlayer.cpp  FFmpegPlayer.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h
godx/src/main/cpp/mmkv/: CMakeLists.txt  CodeInput.cpp  CodeInput.h  CodeOutput.cpp  CodeOutput.h  FileLock.cpp  FileLock.h  InterProgressLock.cpp  InterProgressLock.h  MMKV.cpp  MMKV.h  MMKV_Android.cpp  MMKV_Initialize.cpp  MomeryFile.cpp  MomeryFile.h  PButility.h  ThreadLock.cpp  ThreadLock.h  native-lib.cpp
godx/src/main/cpp/opencv/: CMakeLists.txt  native-lib.cpp
godx/src/main/cpp/rtmp/: CMakeLists.txt  native-lib.cpp
godx/src/main/java/appgodx/ffmpeg/: FFmpegCmd.java  FFmpegPlayer.java
godx/src/main/java/appgodx/mmkv/: MMKV.java
godx/src/main/java/appgodx/opencv/: OpencvUtil.java
godx/src/main/java/com/appgodx/: AppHandler.java  Application.java  ContextUtil.java  LifecycleHandler.java  MergaAppDelegate.java  Reflector.java
godx/src/main/java/com/appgodx/appdelegate/: AppDelegate.java  BaseAppDelegate.java
godx/src/main/java/com/appgodx/base/: BaseActivity.java  BaseApplication.java  BaseFragment.java
godx/src/main/java/com/appgodx/glide/: ActivityFragmentLifecycle.java  ApplicationLifecycle.java  Glide.java  GlideFragment.java  Lifecycle.java  LifecycleListener.java  NetworkBorcastRecevier.java  RequestBuilder.java  RequestManager.java  RequestManagerRetriever.java  Util.java
godx/src/main/java/com/appgodx/http/: Call.java  CallBack.java  OkHttpCall.java  RequestBuilder.java
godx/src/main/res/layout/: activity_main.xml
godx/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
opengltest/: build.gradle
opengltest/src/main/: AndroidManifest.xml
opengltest/src/main/res/values/: strings.xml
opengltest/src/main/res/values-night/: themes.xml
plugin/: build.gradle
plugin/src/main/: AndroidManifest.xml
plugin/src/main/res/layout/: activity_main.xml
(+88 files in other folders)
